# water-tracker

./: .coverage  .dockerignore  .env  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  agents.py  ai_service.py  app.py  cliff.toml  complaint_map.py  complaints.csv  database.py  docker-compose.yml  geocoder.py  industrial_theme.py  init.sql  languages.py  location_cache.py  map_services.py  marker_styles.py  migrate_csv.py  project-plan.md  pyproject.toml  requirements.txt  self_evaluation_content.md  self_evaluation_data.md  setup_db.py  skill.md  utils.py
.specify/templates/: feature-template.json  feature.json  tasks-template.md
specs/: water_issue_tracker.json
