[project]
name = "water-tracker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "pandas",
    "mysql-connector-python",
    "python-dotenv",
    "pre-commit>=4.6.0",
]

[tool.ruff]
line-length = 100

[tool.mypy]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "git-cliff>=2.13.1",
    "pip-audit>=2.10.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
