[project]
name = "water-tracker"
version = "0.1.0"
description = "Water issue tracker Streamlit application"
readme = "README.md"
dependencies = [
    "streamlit",
    "pandas",
    "mysql-connector-python",
    "python-dotenv",
    "folium",
    "streamlit-folium",
    "geopy",
    "requests",
    "openai>=1.0.0",
]

[dependency-groups]
dev = [
    "git-cliff>=2.13.1",
    "pip-audit>=2.10.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "bandit",
    "flake8",
    "pylint",
    "vulture",
    "semgrep",
    "pyupgrade",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
