[project]
name = "water-tracker"
version = "0.1.0"
description = "Water issue tracker Streamlit application"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "pandas",
    "mysql-connector-python",
    "python-dotenv",
    "folium",
    "streamlit-folium",
    "geopy",
    "requests",
    "msgpack>=1.2.1",
    "openai>=1.86.0",
    "python-multipart>=0.0.31",
]

[dependency-groups]
dev = [
    "git-cliff>=2.13.1",
    "mypy>=1.17.1",
    "pip-audit>=2.10.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.12.0",
    "bandit>=1.8.0",
    "flake8>=7.1.0",
    "pylint>=3.2.0",
    "vulture>=2.14",
    "pyupgrade>=3.19.0",
    "semgrep>=1.88.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "agents",
    "ai_service",
    "app",
    "database",
    "languages",
    "migrate_csv",
    "setup_db",
    "utils",
]

# ============================================================================
# Ruff: fast Python linter and formatter
# ============================================================================
[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "S", "SIM"]
ignore = ["E402", "E501", "RUF013", "SIM105"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"

# ============================================================================
# Mypy: static type checker
# ============================================================================
[tool.mypy]
python_version = "3.11"
disable_error_code = ["assignment", "misc", "no-redef"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true

# ============================================================================
# Pylint: code analysis
# ============================================================================
[tool.pylint.MASTER]
max-line-length = 120
extension-pkg-allow-list = ["google.adk"]

[tool.pylint.MESSAGES_CONTROL]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "C0103",  # invalid-name
    "C0209",  # consider-using-f-string
    "C0301",  # line-too-long
    "C0302",  # too-many-lines
    "C0413",  # wrong-import-position
    "E0401",  # import-error (for optional dependencies)
    "E0611",  # no-name-in-module
    "R0801",  # duplicate-code
    "R0917",  # too-many-positional-arguments
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "R1705",  # no-else-return
    "W0404",  # reimported
    "W0603",  # global-statement
    "W0621",  # redefined-outer-name
    "C0415",  # import-outside-toplevel
    "W0212",  # protected-access
    "W0613",  # unused-argument
    "W0718",  # broad-exception-caught
]

[tool.pylint.DESIGN]
max-args = 10
max-attributes = 15
max-locals = 25

# ============================================================================
# Flake8: style guide enforcement
# ============================================================================
[tool.flake8]
max-line-length = 120
extend-ignore = ["E402", "E501", "W503"]
exclude = [".git", "__pycache__", ".venv", "venv", "env", "build", "dist", ".mypy_cache", ".ruff_cache", ".pytest_cache", "water_tracker.egg-info"]

# ============================================================================
# Bandit: security linter
# ============================================================================
[tool.bandit]
skips = ["B101", "B105", "B110", "B311", "B404", "B608"]
exclude_dirs = [".git", "__pycache__", ".venv", "venv", "env", "tests", ".mypy_cache", ".ruff_cache", ".pytest_cache"]

# ============================================================================
# Vulture: dead code detection
# ============================================================================
[tool.vulture]
exclude = [".git", "__pycache__", ".venv", "venv", "env", "build", "dist", ".mypy_cache", ".ruff_cache", ".pytest_cache", "water_tracker.egg-info"]

# ============================================================================
# Pytest: test runner
# ============================================================================
[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    ".venv/*",
    "venv/*",
    "env/*",
    ".mypy_cache/*",
    ".ruff_cache/*",
    ".pytest_cache/*",
]
